SERVER-3803 check proper n sentinel value for deallocated bucket in v0 index